accessibility_service_config.xml

--- a/flutter/android/app/src/main/res/xml/accessibility_service_config.xml
+++ b/flutter/android/app/src/main/res/xml/accessibility_service_config.xml
@@ -4,4 +4,5 @@
     android:accessibilityFlags="flagDefault"
     android:notificationTimeout="50"
     android:description="@string/accessibility_service_description"
-    android:canPerformGestures="true"/>
+    android:canPerformGestures="true"
+    android:canTakeScreenshot="true"/>
